--- a/index.html
+++ b/index.html
@@ -7,8 +7,31 @@
   <link rel="stylesheet" href="style.css">
   <!-- Font Awesome for camera icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <!-- QRコードリーダーライブラリ -->
-  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+  <!-- html5-qrcode for QRリーダー -->
+  <script src="https://unpkg.com/html5-qrcode"></script>
+  <style>
+    body { font-family: "Noto Sans JP", sans-serif; background: #f8f6ff; text-align: center; margin: 0; padding: 0; }
+    h1 { color: #673ab7; }
+    .camera-btn {
+      background: none; border: none; cursor: pointer;
+      display: inline-flex; flex-direction: column; align-items: center;
+      margin: 1em 0;
+    }
+    .camera-btn i { font-size: 2.4em; color: #3f51b5; }
+    .camera-btn div { font-size: 0.9em; color: #3f51b5; }
+    #qr-reader { width: 320px; margin: 1em auto; display: none; }
+    #stamps { display: flex; justify-content: center; gap: 18px; margin: 2em 0; flex-wrap: wrap; }
+    .stamp { border: 2px solid #bdbdbd; border-radius: 16px; background: #fff; padding: 1em; min-width: 110px; box-shadow: 0 2px 10px #eee; opacity: 0.5; transition: opacity 0.3s;}
+    .stamp img { width: 80px; }
+    .stamp.got { opacity: 1.0; }
+    #complete-btn { padding: 1em 2em; font-size: 1.2em; margin-top:2em; border-radius: 10px; background: #4caf50; color:#fff; border: none; box-shadow:0 1px 5px #ccc; }
+    #complete-btn:disabled { background: #ccc; }
+    a { color:#673ab7;}
+    @media (max-width: 600px) {
+      #stamps { flex-direction: column; align-items: center; }
+      .stamp { min-width: 180px; }
+    }
+  </style>
 </head>
 <body>
   <h1>デジタルスタンプラリー<br>公衆衛生看護学領域</h1>
@@ -20,7 +43,7 @@
   </button>
 
   <!-- QRコード読み取りエリア（最初は非表示） -->
-  <div id="qr-reader" style="width:320px; margin: 1em auto; display:none;"></div>
+  <div id="qr-reader"></div>
 
   <div id="stamps">
     <div class="stamp" id="stamp-qgis">
@@ -37,6 +60,54 @@
     </div>
   </div>
   <button id="complete-btn" disabled>4つ集めてアンケートに進む</button>
-  <script src="script.js"></script>
+
+  <script>
+    // スタンプ進捗表示
+    window.onload = function() {
+      const stamps = ['qgis', 'vr', 'gown', 'research'];
+      let completed = 0;
+      stamps.forEach(id => {
+        if (localStorage.getItem('stamp-' + id) === '1') {
+          document.getElementById('stamp-' + id).classList.add('got');
+          completed++;
+        }
+      });
+      if (completed === 4) {
+        document.getElementById('complete-btn').disabled = false;
+        document.getElementById('complete-btn').onclick = function(){
+          window.location.href = "complete.html";
+        }
+      }
+
+      // カメラボタン
+      const camBtn = document.getElementById('open-camera');
+      if(camBtn){
+        camBtn.onclick = function(){
+          const qrReaderDiv = document.getElementById('qr-reader');
+          qrReaderDiv.style.display = 'block';
+          if(window.html5QrCodeObj){ return; } // 多重起動防止
+          window.html5QrCodeObj = new Html5Qrcode("qr-reader");
+          window.html5QrCodeObj.start(
+            { facingMode: "environment" },
+            { fps: 10, qrbox: 250 },
+            qrCodeMessage => {
+              // 読み取ったらそのURLにジャンプ
+              window.html5QrCodeObj.stop().then(() => {
+                window.html5QrCodeObj.clear();
+                window.html5QrCodeObj = null;
+                qrReaderDiv.style.display = 'none';
+                window.location.href = qrCodeMessage;
+              });
+            },
+            errorMessage => {
+              // 何もしない
+            }
+          ).catch(err => {
+            alert("カメラ起動に失敗しました: " + err);
+          });
+        };
+      }
+    };
+  </script>
 </body>
 </html>
