--- a/complete.html
+++ b/complete.html
@@ -9,7 +9,7 @@
   <div class="celebrate">
     <img src="complete.png" alt="Complete!" style="width:120px;">
     <h1>全コンテンツ制覇！おめでとうございます🎉</h1>
-    <p>受付で画面を見せて、ノベルティをゲットしよう！</p>
+    <p>アンケートの回答完了画面をスタッフに見せて、ノベルティをゲットしよう！</p>
     <div class="sns-buttons">
       <button onclick="postToX()">Xでシェア</button>
       <button onclick="postToInstagram()">Instagramでシェア</button>
