--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </style>
 </head>
 <body>
-  <h1>デジタルスタンプラリー<br>公衆衛生看護学領域</h1>
+  <h1>デジタルスタンプラリー<br>奈良県立医科大学　公衆衛生看護学領域</h1>
 
   <!-- カメラ起動ボタン -->
   <button id="open-camera" class="camera-btn">
